# sistools

./: .gitignore  AUTHORS.md  CHANGES.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  REQUISITES.md  TODO.md  build_cmake.sh  clean_cmake.sh  entry.c  makefile  prepare_cmake.sh  remove_cmake_artefacts.sh  rstrip.c  rstrip.h  rstrip_test.cpp  run_all_unit_tests.sh
cmake/: BuildType.cmake
